Fix the back button not showing in Chrome

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1016,10 +1016,15 @@ aside {
   }
 
   .button {
-    height: 1.25em;
-    width: 1.25em;
+    height: 1em;
+    width: 1em;
+
     color: white;
+
     svg {
+      height: 100%;
+      width: 100%;
+
       fill: currentcolor;
     }
   }
@@ -1306,11 +1311,7 @@ aside {
   .button {
     height: 1.5em;
     width: 1.5em;
-
     color: rgba(29, 161, 242, 1.00);
-    svg {
-      fill: currentcolor;
-    }
   }
 }
 
